--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@
             },
             {
                 q: "Who is the Governor of your state now?",
-                a: ["answers will vary", "maura healey", "healey"]
+                a: ["maura healey", "healey"]
             },
             {
                 q: "What is the capital of your state?",
-                a: ["answers will vary", "boston"]
+                a: ["boston"]
             },
             {
                 q: "What are the two major political parties in the United States?",
@@ -564,7 +564,7 @@
             },
             {
                 q: "Name one war fought by the United States in the 1900s.",
-                a: ["world war i", "world war ii", "korean war", "vietnam war", "gulf war", "persian gulf war"]
+                a: ["world war i", "world war ii", "korean war", "vietnam war", "gulf war", "persian gulf war", "wwi", "wwii"]
             },
             {
                 q: "Who was President during World War I?",
@@ -580,7 +580,7 @@
             },
             {
                 q: "Before he was President, Eisenhower was a general. What war was he in?",
-                a: ["world war ii", "world war two"]
+                a: ["world war ii", "world war two", "wwii"]
             },
             {
                 q: "During the Cold War, what was the main concern of the United States?",
@@ -604,7 +604,7 @@
             },
             {
                 q: "Name one of the two longest rivers in the United States.",
-                a: ["missouri river", "mississippi river"]
+                a: ["missouri river", "mississippi river", "missouri", "mississippi"]
             },
             {
                 q: "What ocean is on the West Coast of the United States?",
@@ -628,11 +628,11 @@
             },
             {
                 q: "What is the capital of the United States?",
-                a: ["washington dc", "washington"]
+                a: ["washington dc", "dc"]
             },
             {
                 q: "Where is the Statue of Liberty?",
-                a: ["new york", "new york harbor", "liberty island"]
+                a: ["new york", "new york harbor", "liberty island", "ny"]
             },
             {
                 q: "Why does the flag have 13 stripes?",
@@ -640,7 +640,7 @@
             },
             {
                 q: "Why does the flag have 50 stars?",
-                a: ["because there is one star for each state", "because each star represents a state", "because there are 50 states"]
+                a: ["because there is one star for each state", "because each star represents a state", "because there are 50 states", "each star represents a state", "there is one star for each state", "there are 50 states"]
             },
             {
                 q: "What is the name of the national anthem?",
@@ -648,7 +648,7 @@
             },
             {
                 q: "When do we celebrate Independence Day?",
-                a: ["july 4", "july fourth"]
+                a: ["july 4", "july fourth", "july 4th"]
             },
             {
                 q: "Name two national U.S. holidays.",
