--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             },
             {
                 q: "What is the economic system in the United States?",
-                a: ["capitalist economy", "capitalism", "market economy", "free market"]
+                a: ["capitalist economy", "capitalism", "market economy", "free market", "capitalist"]
             },
             {
                 q: "What is the rule of law?",
