--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             },
             {
                 q: "If the President can no longer serve, who becomes President?",
-                a: ["the vice president", "vice president"]
+                a: ["the vice president", "vice president", "vp"]
             },
             {
                 q: "If both the President and the Vice President can no longer serve, who becomes President?",
@@ -397,7 +397,7 @@
             },
             {
                 q: "What are two Cabinet-level positions?",
-                a: ["secretary of agriculture", "secretary of commerce", "secretary of defense", "secretary of education", "secretary of energy", "secretary of health and human services", "secretary of homeland security", "secretary of housing and urban development", "secretary of the interior", "secretary of labor", "secretary of state", "secretary of transportation", "secretary of the treasury", "secretary of veterans affairs", "attorney general", "vice president"],
+                a: ["secretary of agriculture", "secretary of commerce", "secretary of defense", "secretary of education", "secretary of energy", "secretary of health and human services", "secretary of homeland security", "secretary of housing and urban development", "secretary of the interior", "secretary of labor", "secretary of state", "secretary of transportation", "secretary of the treasury", "secretary of veterans affairs", "attorney general", "vice president", "vp"],
                 minCorrect: 2
             },
             {
