--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
             },
             {
                 q: "Who did the United States fight in World War II?",
-                a: ["japan germany and italy", "japan and germany", "axis powers"]
+                a: ["japan germany and italy"]
             },
             {
                 q: "Before he was President, Eisenhower was a general. What war was he in?",
